src/objects/Attendee__c.object
<CustomObject>
    <description>To keep track of attendee of festival</description>
    <fields>
        <fullName>E_mail__c</fullName>
        <description>Attendee email address</description>
        <label>E_mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <description>festival to which attendee is going</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>phone number of attendee</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>date on which attendee booked ticket</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <description>Source from where attendee booked the ticket</description>
        <label>Purchase Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>Official Website</fullName>
                </value>
                <value>
                    <fullName>3rd Party Vendor</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>General Admission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <description>number of ticket a user has purchased</description>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF ( ISPICKVAL(Ticket_Type__c , &quot;VIP&quot;) ,100 *  Tickets_Purchased__c , 50 *  Tickets_Purchased__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LimitTicket</fullName>
        <active>true</active>
        <description>limit number of tickets an individual can buy</description>
        <errorConditionFormula>Tickets_Purchased__c    &lt; 1  ||  Tickets_Purchased__c &gt; 5</errorConditionFormula>
        <errorMessage>Sorry. You can not buy more than 2 tickets at a time.</errorMessage>
    </validationRules>
</CustomObject>